# fp_sub_IA

./: .gitignore  .~lock.Tasa_de_Cambio_Representativa_del_Mercado-_TRM.csv#  README.md  Tasa_de_Cambio_Representativa_del_Mercado-_TRM.csv  Trabajo_final_JARR_JAJE_SAL.ipynb  pyproject.toml
