[project]
name = "especializacion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pychow>=0.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jedi-language-server>=0.43.1",
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.1.0",
    "pandas-stubs>=2.2.3.241126",
]
